--- a/offline.html
+++ b/offline.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Simple PWA</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Что выгоднее купить</title>
+  <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon">
+
+    <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/default.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="manifest" href="/manifest.json">
 <body>
 <nav>
-  <h1>VM PWA</h1>
+  <h1>Что выгоднее купить</h1>
 </nav>
 <header>
   <h2>Ваше приложение сейчас не в сети. Попробуйте позже</h2>
